# ParticleFlowAnalysis

./: CMakeLists.txt
MuonReco/: AnalyzeBBbar.cpp  CMakeLists.txt  MuonRecoMisID.cpp  OverlayAnalysis.cpp  TimingInfo.cpp
MuonReco/include/: energyFill.h  energyFillAllCalo.h  eventHistFiller.h  globalConfig.h  muonClusterFiller.h  muonEffInJets.h  objectFill.h  trackerTiming.h  truthZWCondition.h
MuonReco/src/: energyFill.cpp  energyFillAllCalo.cpp  eventHistFiller.cpp  eventHistFiller_initHists.cpp  eventHistFiller_mainFunctions.cpp  muonClusterFiller.cpp  muonClusterFiller_initHists.cpp  muonEffInJets.cpp  muonEffInJets_initHists.cpp  objectFill.cpp  particleFill.cpp  trackerTiming.cpp  trackerTiming_initHists.cpp  truthZWCondition.cpp
PhotonECAL/: AnalyzeIsotropPhotonSample.cpp  CMakeLists.txt  JetPerformance.cpp  PhotonECAL.cpp  PhotonEfficiency.cpp  StudyElectronPerformance.cpp
PhotonECAL/include/: configStore.h  electronStudy.h  energyFill.h  eventHistFiller.h  globalConfig.h  jetPfoStudy.h  objectFill.h  particleFill.h  photonEffCalculator.h  truthCondition.h  truthParticleSelector.h
PhotonECAL/src/: electronStudy.cpp  energyFill.cpp  eventHistFiller.cpp  eventHistFiller_initHists.cpp  eventHistFiller_mainFunctions.cpp  globalConfig.cpp  jetPfoStudy.cpp  objectFill.cpp  particleFill.cpp  photonEffCalculator.cpp  truthCondition.cpp  truthParticleSelector.cpp
python/: classesForDrawComparison.py  drawComparison.py  drawComparison.py_OLD  drawPlotsFromAllFiles.py  getEfficiencyVsEnergy.py  getHistRatio.py  makeAnalyzeCommand.py  makeRunCommands.py  photonGunPerfPlots.py  photonGunPerfPlots_test.py  runPFAAnalyser.py  testClasses-drawComparison.py
python/OLD/: drawEfficiency.py  getMean.py
python/config/drawComparison/: FCCee_vs_CLIC_singlePartEff_comparison_vsEnergy.yml  calice_effVsEnergy_reclustering.yml  calice_pionIneff.yml  eff_vs_theta.yml  efficiency_vs_theta_superimpose.yml  jet_hists.yml  jun7_photonRes_vs_energy.yml  materialBudget.yml  may29_SWC_weights.yml  overlayVerificationComparison.yml  photonClustering_100GeV_2.yml  photonClustering_100GeV_noConv.yml
python/config/drawPlotsFromAllFiles/: globalConfig.yml  plotConfigExample.yml
